Changed contact page`

--- a/app/partials/contactme.html
+++ b/app/partials/contactme.html
@@ -10,12 +10,16 @@
                 <div class="row">
                     <div class="form-group">
                         <label>First Name *</label><input name="total" ng-model="contactinfo.Name" class="form-control" ng-required>
-
                     </div>
+                    <label>Last Name *</label><input name="total" ng-model="contactinfo.Name" class="form-control" ng-required>
+                    </div>
+                    <label>Email </label><input email="total" ng-model="contactinfo.Email" class="form-control">
+                </div>
+            <label>Phone Number </label><input PhoneNumber="total" ng-model="contactinfo.PhoneNumber" class="form-control">
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-    <p style="text-align:center;"><button type="button" class="btn btn-success" ng-click="contactMe(contactinfo)">Submit</button></p>
+<p style="text-align:center;"><button type="button" class="btn btn-success" ng-click="contactMe(contactinfo)">Submit</button></p>
