--- a/app/partials/featured.html
+++ b/app/partials/featured.html
@@ -1,10 +1,25 @@
-<h1>Featured</h1>
+<h1>Featured Offers</h1>
 <div class="row">
     <div class="col-md-6">
 
         <h3>2016 Toyota Corolla</h3>
+        <h4> Lease </h4>
         <div class="row">
             <img src="app/img/16corolla2.png" width="245" height="212">
+
+        </div>
+
+        <div class="row">
+            <div class="row">
+                <div class="col-md-2"><p style="font-size: medium">$149</p></div>
+                <div class="col-md-2"><p style="font-size: medium">24</p></div>
+                <div class="col-md-2"><p style="font-size: medium">$1599</p></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">per month</div>
+                <div class="col-md-2">months</div>
+                <div class="col-md-2">due at signing</div>
+            </div>
 
         </div>
 
@@ -12,10 +27,26 @@
     <div class="col-md-6">
 
         <h3>2016 Toyota Camry</h3>
+        <h4> Lease </h4>
         <div class="row">
             <img src="app/img/16camry.png" width="245" height="212">
 
         </div>
+
+        <div class="row">
+            <div class="row">
+                <div class="col-md-2"><p style="font-size: medium">$189</p></div>
+                <div class="col-md-2"><p style="font-size: medium">24</p></div>
+                <div class="col-md-2"><p style="font-size: medium">$1549</p></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">per month</div>
+                <div class="col-md-2">months</div>
+                <div class="col-md-2">due at signing</div>
+            </div>
+        </div>
+
+    </div>
 
 
     </div>
