--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3>Excellence Motors: Customer Satisfaction is our Priority</h3>
+    <h3>Excellence Motors:Claire Customer Satisfaction is our Priority</h3>
     <hr style="border:none;background-color:#cccccc;color:#cccccc;height:1px;">
     <p><img width="225" height="212" alt="" src="app/img/agilepic[3].png" style="float:left;margin-right:10px;" class="">
 
@@ -36,31 +36,12 @@
 
 <div class="row" style="margin-top: 40px">
     <div class="col-md-3">
-        <h3>Featured</h3>
+        <h3>Featured Offers</h3>
         <hr style="border:none;background-color:#cccccc;color:#cccccc;height:1px;">
         <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top3.png" class=""></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, tellus sit amet congue.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
+        <p>View featured deals.</p>
+        <p style="..."><a href="#/featured"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></a></p>
     </div>
-    <div class="col-md-3">
-        <h3>Parts & Serviceg</h3>
-        <hr style="border:none;background-color:#cccccc;color:#cccccc;height:1px;">
-        <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top1.png" class=""></p>
-        <p>Cras elit nisl, rhoncus nec iaculis ultricies. Etiam pharetra, tellus sit amet congue vulputate.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
-    </div>
-    <div class="col-md-3">
-        <h3>Offers</h3>
-        <hr style="border:none;background-color:#C4D8E9;color:#C4D8E9;height:1px;">
-        <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top2.png" class=""></p>
-        <p>Tellus sit amet congue vulputate, nisi erat iaculis nibh, vitae feugiat sapien ante eget mauris.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
-    </div>
-    <div class="col-md-3">
-        <h3>Accessories</h3>
-        <hr style="border:none;background-color:#C4D8E9;color:#C4D8E9;height:1px;">
-        <p style="text-align:center;"><img width="125" height="125" alt="" src="app/img/top2.png" class=""></p>
-        <p>Tellus sit amet congue vulputate, nisi erat iaculis nibh, vitae feugiat sapien ante eget mauris.</p>
-        <p style="text-align: center;"><button type="button" class="btn btn-info" ng-click="go('#/home')">Read more</button></p>
-    </div>
+
+
 </div>
