--- a/app/partials/parts-service.html
+++ b/app/partials/parts-service.html
@@ -4,28 +4,65 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-6">
         <h4>Enter Date of Service (mm/dd/yyyy)</h4>
-        <div class="input-group col-lg-12">
+        <div class="input-group">
             <input type="text" class="form-control search-bar" placeholder="Date" aria-describedby="service-date">
+
         </div>
-    </div>
-    <div class="col-lg-6">
-        <h4>Enter Service Reason</h4>
-        <div class="input-group col-lg-12">
-            <input type="text" class="form-control search-bar" placeholder="What seems to be the problem?" aria-describedby="service-reason">
-        </div>
+</div>
+
+<div class="row">
+            <h4>Car Make</h4>
+            <div class="input-group">
+                <input type="text" class="form-control search-bar" placeholder="Honda/Toyota/Chevy"
+                       aria-describedby="service-make">
+            </div>
+</div>
+
+<div class="row">
+            <h4>Enter Service Reason</h4>
+            <div class="input-group col-lg-6">
+                <textarea type="text" class="form-control search-bar" placeholder="What seems to be the problem?"
+                       aria-describedby="service-reason"></textarea>
+            </div>
+</div>
+
+<div class="row">
+    <h4>Your Name</h4>
+    <div class="input-group">
+        <input type="text" class="form-control search-bar" placeholder="John Doe"
+               aria-describedby="service-your name">
     </div>
 </div>
+
+<div class="row">
+    <h4>Email</h4>
+    <div class="input-group">
+        <input type="text" class="form-control search-bar" placeholder="email"
+               aria-describedby="service-email">
+    </div>
+</div>
+<div class="row">
+    <h4>Phone Number</h4>
+    <div class="input-group">
+        <input type="text" class="form-control search-bar" placeholder="1-800-***-****"
+               aria-describedby="service-phone number">
+    </div>
+</div>
+
+
+
 
 <div class="row submit-button">
-    <div class="col-lg-6">
-        <button type="button" class="btn btn-success">Submit</button>
-    </div>
-</div>
+            <div class="col-lg-6">
+                <button type="button" class="btn btn-success">Submit</button>
+            </div>
+        </div>
 
-<!--Check out these links for ideas:-->
-<!--http://www.toyota.com/owners/parts-service/service-centers-->
-<!--http://www.beavertonhonda.com/ServiceCenter-->
-<!--http://www.kunibmw.com/service/index.htm-->
-<!--http://www.kunilexusofportland.com/Our-Services-->
+        <!--Check out these links for ideas:-->
+        <!--http://www.toyota.com/owners/parts-service/service-centers-->
+        <!--http://www.beavertonhonda.com/ServiceCenter-->
+        <!--http://www.kunibmw.com/service/index.htm-->
+        <!--http://www.kunilexusofportland.com/Our-Services-->
+
+
