--- a/app/partials/accessories.html
+++ b/app/partials/accessories.html
@@ -1,19 +1,37 @@
 <div class="row">
     <div class="col-lg-4">
-        <h2>Accessories</h2>
+        <h1 align="center">Accessories </h1>
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-12">
-        <h4>Speakers</h4>
+    <div class="col-md-4">
         <img src="app/img/speakers.jpg" height="150" width="150"/>
+        <h4>Speakers</h4>
+
     </div>
-    <div class="col-lg-12">
-        <h4>Seats</h4>
+    <div class="col-md-4">
         <img src="app/img/seats.jpeg" height="150" width="150"/>
+        <h4>Seats</h4>
+
     </div>
-    <div class="col-lg-12">
-        <h4>Power Extension</h4>
+    <div class="col-md-4">
         <img src="app/img/power-extension.jpeg" height="150" width="150"/>
+        <h4>Power Extension</h4>
     </div>
+    <div class="col-md-4">
+        <img src="app/img/car-gps-lowres-2137.jpg" height="150" width="150"/>
+        <h4>GPS Tracker</h4>
+
+    </div>
+    <div class="col-md-4">
+        <img src="app/img/bluetooth.jpg" height="150" width="150"/>
+    <h4>Bluetooth Car Kit</h4>
+
 </div>
+    <div class="col-md-4">
+        <img src="app/img/Car Vacuum.jpg" height="150" width="150"/>
+        <h4>Car Vacuum</h4>
+
+</div>
+</div>
+
