--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3>Excellence Motors:Claire Customer Satisfaction is our Priority</h3>
+    <h3>Excellence Motors: Customer Satisfaction is our Priority</h3>
     <hr style="border:none;background-color:#cccccc;color:#cccccc;height:1px;">
     <p><img width="225" height="212" alt="" src="app/img/agilepic[3].png" style="float:left;margin-right:10px;" class="">
 
