--- a/app/partials/featured.html
+++ b/app/partials/featured.html
@@ -1,24 +1,24 @@
-<h1>Featured Offers</h1>
+<h1 align="center">Featured Offers</h1>
 <div class="row">
     <div class="col-md-6">
 
-        <h3>2016 Toyota Corolla</h3>
-        <h4> Lease </h4>
-        <div class="row">
+        <h3 align="center">2016 Toyota Corolla</h3>
+        <h4 align="center"> Lease </h4>
+        <div class="row" align="center">
             <img src="app/img/16corolla2.png" width="245" height="212">
 
         </div>
 
-        <div class="row">
+        <div class="row" align="center">
             <div class="row">
-                <div class="col-md-2"><p style="font-size: medium">$149</p></div>
-                <div class="col-md-2"><p style="font-size: medium">24</p></div>
-                <div class="col-md-2"><p style="font-size: medium">$1599</p></div>
+                <div class="col-md-2" style="text-align:left"><p style="font-size: medium">$149</p></div>
+                <div class="col-md-2" style="text-align:center"><p style="font-size: medium">24</p></div>
+                <div class="col-md-2" style="text-align:right"><p style="font-size: medium">$1599</p></div>
             </div>
             <div class="row">
                 <div class="col-md-2">per month</div>
                 <div class="col-md-2">months</div>
-                <div class="col-md-2">due at signing</div>
+                <div class="col-md-3">due at signing</div>
             </div>
 
         </div>
@@ -26,14 +26,14 @@
     </div>
     <div class="col-md-6">
 
-        <h3>2016 Toyota Camry</h3>
-        <h4> Lease </h4>
-        <div class="row">
+        <h3 align="center">2016 Toyota Camry</h3>
+        <h4 align="center"> Lease </h4>
+        <div class="row" align="center">
             <img src="app/img/16camry.png" width="245" height="212">
 
         </div>
 
-        <div class="row">
+        <div class="row" align="center">
             <div class="row">
                 <div class="col-md-2"><p style="font-size: medium">$189</p></div>
                 <div class="col-md-2"><p style="font-size: medium">24</p></div>
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-md-2">per month</div>
                 <div class="col-md-2">months</div>
-                <div class="col-md-2">due at signing</div>
+                <div class="col-md-3">due at signing</div>
             </div>
         </div>
 
@@ -55,19 +55,47 @@
 <div class="row">
     <div class="col-md-6">
 
-        <h3>2016 Toyota RAV-4</h3>
-        <div class="row">
-            <img src="app/img/16rav4.png" width="245" height="212">
+        <h3 align="center">2016 Toyota RAV-4</h3>
+        <h4 align="center"> Lease </h4>
+        <div class="row" align="center">
+            <img src="app/img/rav4.jpg" width="265" height="212">
 
+        </div>
+
+        <div class="row" align="center">
+            <div class="row">
+                <div class="col-md-2"><p style="font-size: medium">$200</p></div>
+                <div class="col-md-2"><p style="font-size: medium">24</p></div>
+                <div class="col-md-2"><p style="font-size: medium">$1650</p></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">per month</div>
+                <div class="col-md-2">months</div>
+                <div class="col-md-3">due at signing</div>
+            </div>
         </div>
 
     </div>
     <div class="col-md-6">
 
-        <h3>2016 Toyota Prius</h3>
-        <div class="row">
+        <h3 align="center">2016 Toyota Prius</h3>
+        <h4 align="center"> Lease </h4>
+        <div class="row" align="center">
             <img src="app/img/16prius.png" width="245" height="212">
 
+        </div>
+
+        <div class="row">
+            <div class="row">
+                <div class="col-md-2"><p style="font-size: medium">$185</p></div>
+                <div class="col-md-2"><p style="font-size: medium">24</p></div>
+                <div class="col-md-2"><p style="font-size: medium">$1500</p></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">per month</div>
+                <div class="col-md-2">months</div>
+                <div class="col-md-3">due at signing</div>
+            </div>
         </div>
 
 
