one serach does it all

--- a/app/partials/vehicles.html
+++ b/app/partials/vehicles.html
@@ -6,28 +6,15 @@
 <div class="row">
     <div class="col-lg-4">
         <div class="input-group">
-            <input type="text" class="search-bar form-control" placeholder=" Search by make" ng-model="search.Make"/>
-                <span class="input-group-addon">
-                    <i class="fa fa-search"></i>
-                </span>
-        </div>
-    </div>
-    <div class="col-lg-4">
-        <div class="input-group">
-            <input type="text" class="search-bar form-control" placeholder=" Search by model" ng-model="search.Model"/>
+            <input type="text" class="search-bar form-control" placeholder=" Search by All" ng-model="search"/>
             <span class="input-group-addon">
                     <i class="fa fa-search"></i>
                 </span>
         </div>
     </div>
-    <div class="col-lg-4">
-        <div class="input-group">
-            <input type="text" class="search-bar form-control" placeholder=" Search by year" ng-model="search.Year"/>
-            <span class="input-group-addon">
-                    <i class="fa fa-search"></i>
-                </span>
-        </div>
+
     </div>
+
 </div>
 <br>
 <div class="row">
